change name in package.json to fast-break-stats

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dropping-dimes",
+  "name": "fast-break-stats",
   "version": "1.0.0",
   "description": "NBA stats visualization",
   "main": "index.js",
